# Cont_Corp_fork

./: convert_maps.py  output.json  test_import.py
mania2json-0.1.1/mania2json-0.1.1/: PKG-INFO  README.md  pyproject.toml
mania2json-0.1.1/mania2json-0.1.1/src/mania2json/: __init__.py  core.py
mania2json-0.1.1/mania2json-0.1.1/src/mania2json.egg-info/: SOURCES.txt  top_level.txt
osu beatmap/: 2438872 Rabbit House - Rabbit in the Black Room.osz  Yunosuke - Kimi wo Mitai (Guest) [Test diff].osu
rhythm-game/: GlobalEnums.gd  GlobalEnums.gd.uid  TimingWindow.gd  TimingWindow.gd.uid  beatmap.gd  beatmap.gd.uid  beatmap.tscn  hitDetect.gd  hitDetect.gd.uid  hitDetect.tscn  main.gd  main.tscn  main_3D.gd  main_3D.gd.uid  main_3D.gid.uid  main_3D.tscn  node_2d.gd  node_2d.gd.uid  node_2d.tscn  note.gd  note.gd.uid  note.tscn  note_3D.tscn  project.godot  receptor.gd  receptor.gd.uid  receptor.tscn  receptorAnimation.gd  receptorAnimation.gd.uid  receptorAnimation.tscn  targets_neutral.png.import  ui.gd  ui.gd.uid
rhythm-game/art/: Note.png.import  blue_receptor.png.import
rhythm-game/maps/: output.json
rhythm-game/maps/audio/: audio.mp3.import
rhythm-game/presets/: negative_acceleration_emitter.tres  slight_hold_curve.tres
